# worldcup2026-companion

./: .gitignore  LICENSE  README.md  TUIYAN_AUDIT_20260610.md  pyproject.toml
configs/: accessible_books.yaml  secrets.example.env  teams.example.yaml  teams.yaml
configs/code_maps/: eloratings_to_fifa.yaml  team_name_aliases.yaml
scripts/: blowout_other_backtest.py  com.worldcup.dailyrefresh.plist  daily_refresh.sh  dedup_twins.py  full_tournament_projection.py  historical_bias_backtest.py  init_db.py  install_launchd.sh  pinnacle_value.py  polymarket_backtest.py  polymarket_flb_backtest.py  predict_club_match.py  predict_fixtures.py  validate_scrape_e2e.py  wc_with_club_prior.py
src/worldcup/: __init__.py  teams_zh.py
src/worldcup/db/: __init__.py  schema.py  seed.py
src/worldcup/eval/: calibration.py  form_review.py  tactics_review.py
src/worldcup/ingest/: api_football.py  api_football_players.py  api_football_squad.py  api_football_stats.py  elo.py  historical_matches.py  llm_news_scorer.py  lottery_cn.py  news_monitor.py  odds_api.py  pinnacle.py  polymarket.py  weather.py
src/worldcup/models/: dixon_coles.py  golden_boot.py  hybrid.py  league_strength.py  markets.py  standings.py
src/worldcup/notify/: daily_digest.py  telegram.py
src/worldcup/simulator/: conditional_mc.py  monte_carlo.py
src/worldcup/strategy/: blowout_other.py  clv_tracker.py  correlated_parlays.py  form_scan.py  group_incentives.py  group_winner_value.py  injury_lag.py  jingcai_crossmarket.py  line_shopping.py  market_anchored.py  polymarket_crypto.py  polymarket_lag.py  rlm.py  (+9 more)
